--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,7 @@
         <module>common</module>
         <module>parsers</module>
         <module>dumper</module>
-<!--        <module>extended-access-log</module>-->
-<!--        <module>installer</module>-->
+        <module>installer</module>
         <module>instrumenter</module>
         <module>plugin</module>
         <module>plugins</module>
