--- a/it-test/pom.xml
+++ b/it-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>profiler-parent</artifactId>
         <groupId>org.qubership.execution-statistics-collector</groupId>
-        <version>9.3.2.70</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
