--- a/plugins/liferay/pom.xml
+++ b/plugins/liferay/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>plugin</artifactId>
         <groupId>org.qubership.execution-statistics-collector.plugin</groupId>
-        <version>9.3.2.70</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../plugin</relativePath>
     </parent>
 
