--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.qubership.execution-statistics-collector</groupId>
         <artifactId>profiler-parent</artifactId>
-        <version>9.3.2.70</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.qubership.execution-statistics-collector.plugin</groupId>
