--- a/plugins/postgresql/pom.xml
+++ b/plugins/postgresql/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.qubership.execution-statistics-collector.plugin</groupId>
         <artifactId>plugin</artifactId>
-        <version>9.3.2.70</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../plugin</relativePath>
     </parent>
 </project>
