--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.qubership.execution-statistics-collector</groupId>
     <artifactId>profiler-parent</artifactId>
-    <version>9.3.2.70</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
