--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,15 +19,22 @@ jobs:
   build-test:
     name: Test
     runs-on: ubuntu-latest
+    env:
+      CENTRAL_PORTAL_USERNAME: ${{ secrets.MAVEN_USER }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 50
-      - name: 'Set up JDK 17'
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: 17
+          server-id: central
+          server-username: CENTRAL_PORTAL_USERNAME
+          server-password: CENTRAL_PORTAL_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
@@ -35,6 +42,12 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: 'Test'
+      - name: Test
         run: mvn --batch-mode install
-
+      - name: Publish snapshots
+        if: ${{ env.CENTRAL_PORTAL_USERNAME != '' }}
+        run: mvn --batch-mode deploy
+        env:
+          CENTRAL_PORTAL_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
