--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,25 +3,93 @@ name: Release
 on:
   workflow_dispatch:
     inputs:
-      version:
+      branch_name:
         required: true
-        default: ''
         type: string
-        description: new version number, without leading v
+        default: 'main'
+        description: Branch name to be released
+      version:
+        required: false
+        type: string
+        default: ''
+        description: Release version number (without v, defaults to gradle.properties)
+      latest:
+        required: true
+        default: true
+        type: boolean
+        description: Set GitHub release as the latest one
+
 jobs:
-  release-to-central:
+  publish-release:
+    name: Publish release
     runs-on: ubuntu-latest
+    permissions:
+      # write permission is required to create a GitHub release
+      contents: write
+      # write permission is required for autolabeler
+      # otherwise, read permission is required at least
+      pull-requests: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # TODO: create and push git tag
-      # TODO: publish GitHub release (automatic? manual?)
+      - name: Get the current version
+        id: current_version
+        shell: bash
+        # language=bash
+        run: |
+          if [[ -n "${{ inputs.version }}" ]]; then
+            VERSION="${{ inputs.version }}"
+          else
+            VERSION=$(grep "^profiler.version=" gradle.properties | cut -d'=' -f2)
+          fi
+          echo "Current version: $VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Check if tag exists
+        uses: actions/github-script@v7
+        env:
+          VERSION: ${{ steps.current_version.outputs.version }}
+        with:
+          # language=javascript
+          script: |
+             const tag = `v${process.env.VERSION}`;
+             // Check if the tag exists
+             const { data: tags } = await github.rest.git.listMatchingRefs({
+                 owner: context.repo.owner,
+                 repo: context.repo.repo,
+                 ref: `tags/${tag}`
+             });
+             if (tags.length > 0) {
+                 core.setFailed(`Tag ${tag} already exists. Bump version in gradle.properties and try releasing again.`);
+             }
+
+      - name: Prepare git name and email
+        # language=bash
+        run: |
+          git config user.name "qubership-actions[bot]"
+          git config user.email "qubership-actions[bot]@users.noreply.github.com"
+
+      - name: Update version in gradle.properties to ${{ steps.current_version.outputs.version }}
+        uses: ./.github/actions/update_version
+        with:
+          version: ${{ steps.current_version.outputs.version }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 17
+          server-id: central
+
+      # Publish to Central before generating a tag, so we don't need to drop the tag if
+      # Central deployment fails.
       - name: Publish to Central Portal
+        if: false
         uses: burrunan/gradle-cache-action@v1
         with:
           arguments: publishAggregationToCentralPortal
+          # language=properties
           properties: |
             release=true
             centralPortalPublishingType=USER_MANAGED
@@ -30,3 +98,19 @@ jobs:
           CENTRAL_PORTAL_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           SIGNING_PGP_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           SIGNING_PGP_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+
+      - name: Publish GitHub release
+        uses: release-drafter/release-drafter@v6
+        id: publish_release
+        with:
+          disable-autolabeler: true
+          publish: true
+          latest: ${{ inputs.latest }}
+          version: ${{ steps.current_version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update version in gradle.properties to ${{ steps.publish_release.outputs.patch_version }}
+        uses: ./.github/actions/update_version
+        with:
+          version: ${{ steps.publish_release.outputs.patch_version }}
