--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,29 +1,26 @@
-name-template: 'v$RESOLVED_VERSION'
-tag-template: 'v$RESOLVED_VERSION'
-
+name-template: "v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
+filter-by-commitish: true
 
 categories:
-  - title: '💥 Breaking Changes'
+  - title: "💥 Breaking Changes"
     labels:
       - breaking-change
-  - title: '🚀 New Features'
+  - title: "💡 New Features"
     labels:
       - feature
       - enhancement
-  - title: '🐞 Bug Fixes'
+  - title: "🐞 Bug Fixes"
     labels:
       - bug
       - fix
       - bugfix
-  - title: '⚙️ Technical Debt'
+  - title: "⚙️ Technical Debt"
     labels:
       - refactor
-  - title: '📝 Documentation'
-    labels:
-      - documentation
 
-change-template: '- $TITLE (#$NUMBER) by @$AUTHOR'
-no-changes-template: 'No significant changes'
+change-template: "- $TITLE (#$NUMBER) by @$AUTHOR"
+no-changes-template: "No significant changes"
 
 template: |
   ## 🚀 Release
