chore: exclude :plugins:... from dependency upgrades
Profiler plugins do not expose the dependencies to the runtime, so the versions used for the build
do not affect the execution. At the same time, we might need to build plugins for different thirdparty
versions, so we intentionally exclude :plugins:* projects from the submitted dependencies

--- a/.github/workflows/gradle-dependency-submit.yaml
+++ b/.github/workflows/gradle-dependency-submit.yaml
@@ -25,3 +25,9 @@ jobs:
         server-id: central
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@06832c7b30a0129d7fb559bcc6e43d26f6374244 # v4
+      with:
+        # Profiler plugins do not expose the dependencies to the runtime, so the versions used for the build
+        # do not affect the execution. At the same time, we might need to build plugins for different thirdparty
+        # versions, so we intentionally exclude :plugins:* projects from the submitted dependencies
+        dependency-graph-exclude-projects: |
+          :plugins:.*
