--- a/renovate.json
+++ b/renovate.json
@@ -45,6 +45,22 @@
       ]
     },
     {
+      "description": "Stick with Tomcat <10 since Tomcat 10+ requires jakarta migration which we can't afford yet",
+      "groupName": "Tomcat",
+      "allowedVersions": "< 10",
+      "matchPackageNames": [
+        "org.apache.tomcat{/,}**"
+      ]
+    },
+    {
+      "description": "Stick with org.springframework.boot <3 as we can't require Java 17 for the runtime yet",
+      "groupName": "Spring Boot",
+      "allowedVersions": "< 3",
+      "matchPackageNames": [
+        "org.springframework.boot{/,}**"
+      ]
+    },
+    {
       "description": "logback 1.3.0 requires slf4j-api 2.0+, and we want using slf4j 1.7",
       "groupName": "logback",
       "allowedVersions": "< 1.3.0",
