chore: require org.openjdk.jmc < 9 since the later version require Java 17

--- a/renovate.json
+++ b/renovate.json
@@ -47,7 +47,9 @@
       ]
     },
     {
+      "description": "Stick with JMC < 9 since JMC 9+ requires Java 17 for the runtime",
       "groupName": "org.openjdk.jmc",
+      "allowedVersions": "< 9",
       "matchPackageNames": [
         "org.openjdk.jmc{/,}**"
       ]
