--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,7 @@ profiler.version=1.0.6
 # By default, Maven Local repository is not used
 # enableMavenLocal=true
 
+kotlin.stdlib.default.dependency=false
+
 slowTestLogThreshold=2000
 slowSuiteLogThreshold=500
