--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -1,19 +1,3 @@
-# File will be loaded as environment variables
-# It must contain strings like:
-# name=value
-
-GITLEAKS_LOG_LEVEL=warn
-VALIDATE_JAVASCRIPT_PRETTIER=false
-VALIDATE_JAVASCRIPT_STANDARD=false
-VALIDATE_JSCPD=false
-VALIDATE_JSON_PRETTIER=false
-VALIDATE_KUBERNETES_KUBECONFORM=false
-VALIDATE_MARKDOWN_PRETTIER=false
-VALIDATE_YAML_PRETTIER=false
-
-# TODO: fix python files and enable the check again
-VALIDATE_PYTHON_BLACK=false
-VALIDATE_PYTHON_FLAKE8=false
-VALIDATE_PYTHON_MYPY=false
-VALIDATE_PYTHON_PYINK=false
-VALIDATE_PYTHON_PYLINT=false
+# The default set of validations is listed in https://github.com/Netcracker/.github/blob/main/config/linters/super-linter.env
+# If you need to activate a linter that is disabled by default, add it with an empty value as follows:
+# VALIDATE_JSCPD=
