fix: use checkstyle.xml instead of the embedded sun_checks.xml for super-linter

--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -1,3 +1,4 @@
 # The default set of validations is listed in https://github.com/Netcracker/.github/blob/main/config/linters/super-linter.env
 # If you need to activate a linter that is disabled by default, add it with an empty value as follows:
 # VALIDATE_JSCPD=
+JAVA_FILE_NAME=checkstyle.xml
