--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,9 @@ on:
         default: ''
         description: Release version number (without v, defaults to gradle.properties)
 
+# Declare default permissions as read-only.
+permissions: read-all
+
 jobs:
   publish-release:
     name: Publish release
