chore: fix typo update_version action

--- a/.github/actions/update_version/action.yaml
+++ b/.github/actions/update_version/action.yaml
@@ -20,7 +20,7 @@ runs:
 
     - name: update version to ${{ inputs.version }}
       shell: bash
-      with:
+      env:
         VERSION: ${{ inputs.version }}
         REF_NAME: ${{ github.ref_name }}
       # language=bash
